--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -25,9 +25,13 @@
               <%= text_field :event, :location, :class => 'mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm' %>
             </div>
 
-            <div class="col-span-6 sm:col-span-3">
-              <%= label :event, :tags, 'Tags', :class => 'block text-sm font-medium text-gray-700' %>
-              <%= text_field :event, 'tags', :class => 'mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm' %>
+            <div class="col-span-6">
+              <% @all_tags.each do |tag| %>
+                <div class="form-check  form-check-inline">
+                  <%= label_tag "tags[#{tag}]", tag, class: 'form-check-label' %>
+                  <%= check_box_tag "tags[#{tag}]", "1",  @tags_to_show.include?(tag), class: 'form-check-input' %>
+                </div>
+              <% end %>
             </div>
 
             <div class="col-span-6">
