--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -8,6 +8,7 @@
         <th scope="col" class="py-3 px-6">Event Name</th>
         <th scope="col" class="py-3 px-6">Date and Time</th>
         <th scope="col" class="py-3 px-6">Location</th>
+        <th scope="col" class="py-3 px-6">Tags</th>
         <th scope="col" class="py-3 px-6"><span class="sr-only">More Info</div></th>
       </tr>
     </thead>
@@ -24,6 +25,11 @@
             <%= event.location %>
           </td>
           <td class="py-4 px-6">
+            <% event.tags.each do |tag| %>
+              <%= tag %>,
+            <% end %>
+          </td>
+          <td class="py-4 px-6">
             <%= button_to "Learn More", about_event_path(event), method: :get, :class => 'font-medium text-blue-600 dark:text-blue-500 hover:underline' %>
           </td>
         </tr>
@@ -32,6 +38,7 @@
   </table>
 </div>
 <div class="mt-6 inline-flex">
+<%= button_to "My Profile", student_profile_path(@student), method: :get , :class => 'text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 focus:outline-none dark:focus:ring-green-800'%>
   <%= button_to "My Events", student_events_path, method: :get , :class => 'text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800'%>
   <%= button_to "Log Out", root_path, method: :get , :class => 'text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900'%>
 </div>
