--- a/app/views/events/organizer_index.html.erb
+++ b/app/views/events/organizer_index.html.erb
@@ -26,7 +26,9 @@
             <%= event.location %>
           </td>
           <td class="py-4 px-6">
-            <%= event.tags %>
+            <% event.tags.each do |tag| %>
+              <%= tag %>,
+            <% end %>
           </td>
           <td class="py-4 px-6">
             <%= link_to "More about #{event.name}", event_path(event), :class => 'font-medium text-blue-600 dark:text-blue-500 hover:underline' %>
