--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="px-4 sm:px-0">
       <h3 class="text-lg font-medium leading-6 text-gray-900">Edit Existing Event</h3>
       <p class="mt-1 text-sm text-gray-600">Edit your event, then click update to save, or cancel to go back.</p>
-
+      <p class="mt-3 text-sm text-gray-600">Note that not selecting any tags is treated the same as selecting all tags.</p>
       <% if @scheduling_options[:first][:num_available] != -1 && @total_students != 0%>
       <p class="mt-5 text-sm text-danger">Need help scheduling your event for optimal turnout?</p>
       <p class="mt-1 text-sm text-gray-600">  We took a look at all the schedules of all <%= @total_students %> students in our database whose profiles indicate they might be interested in your event. Here are when they're most free (in military time): </p>
