--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -3,6 +3,7 @@
     <div class="px-4 sm:px-0">
       <h3 class="text-lg font-medium leading-6 text-gray-900">Create New Event</h3>
       <p class="mt-1 text-sm text-gray-600">Describe your event then click save.</p>
+      <p class="mt-3 text-sm text-gray-600">Note that not selecting any tags is treated the same as selecting all tags.</p>
     </div>
   </div>
   <div class="mt-5 md:col-span-2 md:mt-0">
